[package]
name = "monorail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-executor = { version = "1.13.2", features = ["static"] }
async-task = "4.7.1"
asyncnal = "0.3.1"
fastrand = "2.3.0"
flume = "0.11.1"
futures = "0.3.31"
ghost-cell = "0.2.6"
heapless = "0.9.1"
io-uring = "0.7.10"
lfqueue = "0.8.1"
nix = { version = "0.30.1", features = ["event", "fs", "net", "sched", "socket"] }
num_cpus = "1.17.0"
pin-project = "1.1.10"
rand = "0.9.2"
slab = "0.4.11"
slotmap = "1.0.7"
smallbox = "0.8.8"
smol = "2.0.2"
static-rc = "0.7.0"
thiserror = "2.0.16"
monorail-proc = { path = "../proc" }

[dev-dependencies]
tempfile = "3.21.0"
